objects/Milestone1_Project__c.object
<CustomObject>
    <description>This object is a replica of the Old Project object(Miilestone1 Unmanaged package)</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ProForce Dev 091514, 
dp 10/10/14 renamed &quot;Project Account&quot; to &quot;Corporate Customer&quot;.</description>
        <inlineHelpText>Account</inlineHelpText>
        <label>Corporate Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Projects2_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Box_Share_URL__c</fullName>
        <description>Box URL added for service user who don&apos;t have Box access.</description>
        <inlineHelpText>Box attachments Share URL. Requires that Project Manager add this shared link using Box sharing rules and copies it into this field.</inlineHelpText>
        <label>Box Share URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Budget_Icon__c</fullName>
        <formula>IF( ISPICKVAL(Budget__c, &quot;Green&quot;), IMAGE(&quot;/img/msg_icons/confirm16.png&quot;,&quot;Green&quot;), 
IF( ISPICKVAL(Budget__c, &quot;Red&quot;), IMAGE(&quot;/img/msg_icons/error16.png&quot;,&quot;Red&quot;), 
IF( ISPICKVAL(Budget__c, &quot;Yellow&quot;), IMAGE(&quot;/img/msg_icons/warning16.png&quot;,&quot;Yellow&quot;), 
IMAGE(&quot;/img/msg_icons/info16.png&quot;,&quot;Blue&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Reason__c</fullName>
        <description>ProForce Dev 091514</description>
        <inlineHelpText>Budget Reason</inlineHelpText>
        <label>Budget Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Budget_Status_Reporting__c</fullName>
        <formula>IF( ISPICKVAL(Budget__c, &quot;Green&quot;), &quot;Green&quot;, 
IF( ISPICKVAL(Budget__c, &quot;Red&quot;), &quot;Red&quot;, 
IF( ISPICKVAL(Budget__c, &quot;Yellow&quot;), &quot;Yellow&quot;, 
&quot;Blue&quot;)))</formula>
        <label>Budget Status Reporting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_CARE__c</fullName>
        <label>Closed CARE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Hardware_Distribution__c</fullName>
        <label>Closed Distribution Products</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Hardware_Media__c</fullName>
        <label>Closed Media Products</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Hardware_Networking__c</fullName>
        <label>Closed Networking Products</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Hardware_Playout__c</fullName>
        <label>Closed Playout Products</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Professional_Services__c</fullName>
        <label>Closed Professional Services</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country_Id__c</fullName>
        <formula>Opportunity__r.Shipping_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ProForce Dev 091514</description>
        <inlineHelpText>Country</inlineHelpText>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipName>Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <inlineHelpText>The date by which the project is scheduled to be completed by.</inlineHelpText>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>A general description of the project.</inlineHelpText>
        <label>Project Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>Deadline__c - Kickoff__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days between Kickoff and Deadline.</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_User_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>10/10/14 - Professional Services Project dp</description>
        <inlineHelpText>End User Account</inlineHelpText>
        <label>End User Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Projects1_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Final_Rev_Rec_Date__c</fullName>
        <description>ProForce Dev 0911514</description>
        <inlineHelpText>Final Rev Rec Date</inlineHelpText>
        <label>Final Rev Rec Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FolderId__c</fullName>
        <description>ProForce dev 091514</description>
        <label>FolderId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GoogleGanntUrl__c</fullName>
        <inlineHelpText>Calculated.</inlineHelpText>
        <label>GoogleGanntUrl</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ImportID__c</fullName>
        <label>Import ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Template__c</fullName>
        <description>ProForce Dev 091514</description>
        <inlineHelpText>Initial Template</inlineHelpText>
        <label>Initial Template</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Instructions_to_the_Supply_Chain_Team__c</fullName>
        <description>Instructions to the Supply Chain Team</description>
        <label>Instructions to the Supply Chain Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issues_Tracker_URL__c</fullName>
        <description>Issues Tracker URL</description>
        <inlineHelpText>Issues Tracker URL</inlineHelpText>
        <label>Issues Tracker URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Kickoff__c</fullName>
        <inlineHelpText>What date should this project start?</inlineHelpText>
        <label>Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Arrival_Onsite_Date__c</fullName>
        <description>Latest Arrival Onsite Date</description>
        <label>Latest Arrival Onsite Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Media_USD__c</fullName>
        <description>proforce Dev 091514</description>
        <inlineHelpText>Media USD Rollup</inlineHelpText>
        <label>Media USD</label>
        <summarizedField>Order__c.Media__c</summarizedField>
        <summaryForeignKey>Order__c.Old_Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Networking_USD__c</fullName>
        <description>ProForce Dev 091514</description>
        <inlineHelpText>Networking USD</inlineHelpText>
        <label>Networking USD</label>
        <summarizedField>Order__c.Networking__c</summarizedField>
        <summaryForeignKey>Order__c.Old_Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Next_Project_Milestone_Due_Date__c</fullName>
        <inlineHelpText>Calculated as the next incomplete task with a due date in this project. This includes sub-milestones.</inlineHelpText>
        <label>Next Project Milestone Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Project_Top_Milestone_Due_Date__c</fullName>
        <inlineHelpText>The next incomplete milestone due date. This does not include sub-milestones.</inlineHelpText>
        <label>Next Project Top Milestone Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Incomplete_Milestones__c</fullName>
        <inlineHelpText>Calculated sum of the number of incomplete milestones assigned to this project. This includes sub-milestones in the project.</inlineHelpText>
        <label>Number of Incomplete Milestones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Incomplete_Top_Milestones__c</fullName>
        <inlineHelpText>The number of incomplete milestones that are in this project. This does not count sub-milestones.</inlineHelpText>
        <label>Number of Incomplete Top Milestones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OneDrive_Folder_Id__c</fullName>
        <label>OneDrive Folder Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_CARE__c</fullName>
        <label>Open CARE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Hardware_Distribution__c</fullName>
        <label>Open Distribution Products</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Hardware_Media__c</fullName>
        <label>Open Media Products</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Hardware_Networking__c</fullName>
        <label>Open Networking Products</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Hardware_Playout__c</fullName>
        <label>Open Playout Products</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Professional_Services__c</fullName>
        <label>Open Professional Services</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_Account_Name_Link__c</fullName>
        <formula>HYPERLINK(&quot;https://na15.salesforce.com/&quot; &amp;  Opportunity__r.AccountId , Opportunity_Account_Name__c, &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Account_Name__c</fullName>
        <description>ProForce Dev 091415</description>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunity Account Name</inlineHelpText>
        <label>Opportunity Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product initiated  from an opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Oracle_Project_Code__c</fullName>
        <label>Oracle Project Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Over_All_Project_Health_Reporting__c</fullName>
        <formula>IF( ISPICKVAL(Scope__c, &quot;Red&quot;),&quot;RED&quot;, 
IF( ISPICKVAL(Schedule__c, &quot;Red&quot;),&quot;RED&quot;, 
IF( ISPICKVAL(Budget__c, &quot;Red&quot;),&quot;RED&quot;, 
IF( ISPICKVAL(Risk__c, &quot;Red&quot;), &quot;RED&quot;, 
IF( ISPICKVAL(Schedule__c, &quot;Yellow&quot;),&quot;YELLOW&quot;, 
IF( ISPICKVAL(Scope__c, &quot;Yellow&quot;),&quot;YELLOW&quot;, 
IF( ISPICKVAL(Budget__c, &quot;Yellow&quot;),&quot;YELLOW&quot;, 
IF( ISPICKVAL(Risk__c, &quot;Yellow&quot;),&quot;YELLOW&quot;, 
IF( ISPICKVAL(Scope__c, &quot;Green&quot;),&quot;GREEN&quot;, 
IF( ISPICKVAL(Schedule__c, &quot;Green&quot;), &quot;GREEN&quot;, 
IF( ISPICKVAL(Budget__c, &quot;Green&quot;), &quot;GREEN&quot;, 
IF( ISPICKVAL(Risk__c, &quot;Green&quot;), &quot;GREEN&quot;, 
&quot;BLUE&quot;))))))))))))</formula>
        <label>Over All Project Health Reporting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Orig_Rev_Rec_Date__c</fullName>
        <description>ProForce Dev 091514</description>
        <inlineHelpText>PM Original Rev Rec Date</inlineHelpText>
        <label>PM Orig Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PM_Reason_Revised_Rev_Rec_Date__c</fullName>
        <description>Brief update on current status and description of any obstacle or risks to completion.  Changed from PM Reason Revised on 3/2/18 at the request of the proforce team.</description>
        <inlineHelpText>Brief status of project needs to complete and description of any obstacle or risks to completion or ability to recognize revenue.  Detail all necessary items for getting sign off.</inlineHelpText>
        <label>Project Status &amp; Rev Rec Impact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PM_Revised_Rev_Rec_Date__c</fullName>
        <description>ProForce Dev 091514</description>
        <inlineHelpText>PM Revised Rev Rec Date</inlineHelpText>
        <label>PM Revised Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PM_Type_of_Revision__c</fullName>
        <description>Provides the reason we had to revise the completion date.</description>
        <inlineHelpText>Provides the reason we had to revise the completion date.</inlineHelpText>
        <label>PM Type of Revision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Product Quality/Delivery</fullName>
                </value>
                <value>
                    <fullName>PS Delivery</fullName>
                </value>
                <value>
                    <fullName>3rd Party Issue</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Project</label>
        <referenceTo>Milestone1_Project__c</referenceTo>
        <relationshipName>Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PlayOut_USD__c</fullName>
        <description>ProForce Dev</description>
        <inlineHelpText>PlayOut USD rollup</inlineHelpText>
        <label>PlayOut USD</label>
        <summarizedField>Order__c.Playout__c</summarizedField>
        <summaryForeignKey>Order__c.Old_Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Power_of_One__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Health__c</fullName>
        <formula>IF( ISPICKVAL(Scope__c, &quot;Red&quot;), IMAGE(&quot;/img/msg_icons/error32.png&quot;,&quot;Red&quot;),  
IF( ISPICKVAL(Schedule__c, &quot;Red&quot;), IMAGE(&quot;/img/msg_icons/error32.png&quot;,&quot;Red&quot;), 
IF( ISPICKVAL(Budget__c, &quot;Red&quot;), IMAGE(&quot;/img/msg_icons/error32.png&quot;,&quot;Red&quot;),
IF( ISPICKVAL(Risk__c, &quot;Red&quot;), IMAGE(&quot;/img/msg_icons/error32.png&quot;,&quot;Red&quot;),
IF( ISPICKVAL(Schedule__c, &quot;Yellow&quot;), IMAGE(&quot;/img/msg_icons/warning32.png&quot;,&quot;Yellow&quot;), 
IF( ISPICKVAL(Scope__c, &quot;Yellow&quot;), IMAGE(&quot;/img/msg_icons/warning32.png&quot;,&quot;Yellow&quot;),
IF( ISPICKVAL(Budget__c, &quot;Yellow&quot;), IMAGE(&quot;/img/msg_icons/warning32.png&quot;,&quot;Yellow&quot;), 
IF( ISPICKVAL(Risk__c, &quot;Yellow&quot;), IMAGE(&quot;/img/msg_icons/warning32.png&quot;,&quot;Yellow&quot;), 
IF( ISPICKVAL(Scope__c, &quot;Green&quot;), IMAGE(&quot;/img/msg_icons/confirm32.png&quot;,&quot;Green&quot;), 
IF( ISPICKVAL(Schedule__c, &quot;Green&quot;), IMAGE(&quot;/img/msg_icons/confirm32.png&quot;,&quot;Green&quot;), 
IF( ISPICKVAL(Budget__c, &quot;Green&quot;), IMAGE(&quot;/img/msg_icons/confirm32.png&quot;,&quot;Green&quot;), 
IF( ISPICKVAL(Risk__c, &quot;Green&quot;), IMAGE(&quot;/img/msg_icons/confirm32.png&quot;,&quot;Green&quot;), 
IMAGE(&quot;/img/msg_icons/info32.png&quot;,&quot;Blue&quot;)))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Over All Project Health</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <description>Project Number</description>
        <displayFormat>{000000000}</displayFormat>
        <inlineHelpText>Project Number</inlineHelpText>
        <label>Project Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Project_Stage__c</fullName>
        <description>ProForce Dev 091514</description>
        <inlineHelpText>Project Stage</inlineHelpText>
        <label>Project Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Execution</fullName>
                </value>
                <value>
                    <fullName>Acceptance Pending</fullName>
                </value>
                <value>
                    <fullName>Invoice pending</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <description>ProForce Dev 091514</description>
        <inlineHelpText>Project Type</inlineHelpText>
        <label>Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Networking</fullName>
                </value>
                <value>
                    <fullName>Playout</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>POC</fullName>
                </value>
                <value>
                    <fullName>Support Billable</fullName>
                </value>
                <value>
                    <fullName>Percent Complete</fullName>
                </value>
                <value>
                    <fullName>Milestone Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Professional Service Project from Quote</inlineHelpText>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipName>Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region_del__c</fullName>
        <formula>Country__r.Global_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Service Contract</description>
        <inlineHelpText>Related Service Contract</inlineHelpText>
        <label>Related Service Contract</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ServiceContract.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.End_User_Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipName>Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revised_Arrival_Onsite_Date__c</fullName>
        <description>Revised Arrival Onsite Date</description>
        <label>Revised Arrival Onsite Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Risk_Icon__c</fullName>
        <description>Proforce Dev 091514</description>
        <formula>IF( ISPICKVAL(Risk__c, &quot;Green&quot;), IMAGE(&quot;/img/msg_icons/confirm16.png&quot;,&quot;Green&quot;), 
IF( ISPICKVAL(Risk__c, &quot;Red&quot;), IMAGE(&quot;/img/msg_icons/error16.png&quot;,&quot;Red&quot;), 
IF( ISPICKVAL(Risk__c, &quot;Yellow&quot;), IMAGE(&quot;/img/msg_icons/warning16.png&quot;,&quot;Yellow&quot;), 
IMAGE(&quot;/img/msg_icons/info16.png&quot;,&quot;Blue&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Reason__c</fullName>
        <description>ProForce Dev 091514</description>
        <inlineHelpText>Risk Reason</inlineHelpText>
        <label>Risk Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Status_Reporting__c</fullName>
        <formula>IF( ISPICKVAL(Risk__c, &quot;Green&quot;), &quot;Green&quot;, 
IF( ISPICKVAL(Risk__c, &quot;Red&quot;),&quot;Red&quot;, 
IF( ISPICKVAL(Risk__c, &quot;Yellow&quot;),&quot;Yellow&quot;, 
&quot;Blue&quot;)))</formula>
        <label>Risk Status Reporting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <description>Proforce Dev 091914</description>
        <inlineHelpText>Risk</inlineHelpText>
        <label>Risk</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SP_Folder_Name__c</fullName>
        <formula>&quot;PRJ &quot; &amp; Name &amp; &quot; &quot; &amp; Project_Number__c</formula>
        <label>SP Folder Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Salesforce Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Icon__c</fullName>
        <description>ProForce Dev 091514</description>
        <formula>IF( ISPICKVAL(Schedule__c, &quot;Green&quot;), IMAGE(&quot;/img/msg_icons/confirm16.png&quot;,&quot;Green&quot;), 
IF( ISPICKVAL(Schedule__c, &quot;Red&quot;), IMAGE(&quot;/img/msg_icons/error16.png&quot;,&quot;Red&quot;), 
IF( ISPICKVAL(Schedule__c, &quot;Yellow&quot;), IMAGE(&quot;/img/msg_icons/warning16.png&quot;,&quot;Yellow&quot;), 
IMAGE(&quot;/img/msg_icons/info16.png&quot;,&quot;Blue&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Reason__c</fullName>
        <description>ProForce Dev 091514</description>
        <inlineHelpText>Schedule Reason</inlineHelpText>
        <label>Schedule Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Schedule_Status_Reporting__c</fullName>
        <formula>IF( ISPICKVAL(Schedule__c, &quot;Green&quot;), &quot;Green&quot;, 
IF( ISPICKVAL(Schedule__c, &quot;Red&quot;), &quot;Red&quot;, 
IF( ISPICKVAL(Schedule__c, &quot;Yellow&quot;), &quot;Yellow&quot;, 
&quot;Blue&quot;)))</formula>
        <label>Schedule Status Reporting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <description>ProForce Dev 091514</description>
        <inlineHelpText>Schedule</inlineHelpText>
        <label>Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scope_Icon__c</fullName>
        <description>ProForce Dev 091514</description>
        <formula>IF( ISPICKVAL(Scope__c, &quot;Green&quot;), IMAGE(&quot;/img/msg_icons/confirm16.png&quot;,&quot;Green&quot;), 
IF( ISPICKVAL(Scope__c, &quot;Red&quot;), IMAGE(&quot;/img/msg_icons/error16.png&quot;,&quot;Red&quot;), 
IF( ISPICKVAL(Scope__c, &quot;Yellow&quot;), IMAGE(&quot;/img/msg_icons/warning16.png&quot;,&quot;Yellow&quot;), 
IMAGE(&quot;/img/msg_icons/info16.png&quot;,&quot;Blue&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scope Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope_Reason__c</fullName>
        <description>ProForce Dev 091514</description>
        <inlineHelpText>Scope Reason</inlineHelpText>
        <label>Scope Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Scope_Status_Reporting__c</fullName>
        <formula>IF( ISPICKVAL(Scope__c, &quot;Green&quot;), &quot;Green&quot;, 
IF( ISPICKVAL(Scope__c, &quot;Red&quot;), &quot;Red&quot;, 
IF( ISPICKVAL(Scope__c, &quot;Yellow&quot;), &quot;Yellow&quot;, 
&quot;Blue&quot;)))</formula>
        <label>Scope Status Reporting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <description>ProForce Dev 091514</description>
        <inlineHelpText>Scope</inlineHelpText>
        <label>Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_USD__c</fullName>
        <description>Proforce Dev 091514</description>
        <inlineHelpText>Service USD Rollup</inlineHelpText>
        <label>Service USD</label>
        <summarizedField>Order__c.Service__c</summarizedField>
        <summaryForeignKey>Order__c.Old_Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status_BudgetExpenseSummary__c</fullName>
        <formula>IF( Total_Expense_Budget__c &gt; 0,
IMAGE(
&quot;http://chart.apis.google.com/chart?chtt=Task+Expense+Budget+Analysis&amp;&quot; &amp;
&quot;chxr=0,0,&quot; &amp; Text(max( Total_Expense_Budget__c,Total_Expense_Budget_from_Milestones__c,Total_Expense_Estimate__c, Total_Expense_Incurred__c)) &amp; &quot;&amp;&quot; &amp;
&quot;chxt=y&amp;chbh=a&amp;chs=300x225&amp;cht=bvg&amp;&quot;&amp;
&quot;chco=2299bb,eeaa66,ee3322,666666&amp;&amp;&quot;&amp;
&quot;chdl=&quot;&amp;
&quot;Budget (&quot; &amp; TEXT(Total_Expense_Budget__c) &amp; &quot;)&quot;&amp;
&quot;|Planned (&quot; &amp; TEXT(Total_Expense_Budget_from_Milestones__c) &amp; &quot;)&quot;&amp;
&quot;|Estimated (&quot; &amp; TEXT(Total_Expense_Estimate__c) &amp; &quot;)&quot;&amp;
&quot;|Incurred (&quot; &amp; TEXT(Total_Expense_Incurred__c) &amp; &quot;)&quot;&amp;
&quot;&amp;chd=t:&quot;&amp;
TEXT( Total_Expense_Budget__c / max( Total_Expense_Budget__c,Total_Expense_Budget_from_Milestones__c,Total_Expense_Estimate__c, Total_Expense_Incurred__c) * 100 )&amp;&quot;|&quot;&amp; 
TEXT( Total_Expense_Budget_from_Milestones__c / max( Total_Expense_Budget__c,Total_Expense_Budget_from_Milestones__c,Total_Expense_Estimate__c, Total_Expense_Incurred__c) * 100)  &amp;&quot;|&quot; &amp; 
TEXT( Total_Expense_Estimate__c / max( Total_Expense_Budget__c,Total_Expense_Budget_from_Milestones__c,Total_Expense_Estimate__c, Total_Expense_Incurred__c) * 100 ) &amp;&quot;|&quot; &amp; 
TEXT(  Total_Expense_Incurred__c / max( Total_Expense_Budget__c,Total_Expense_Budget_from_Milestones__c,Total_Expense_Estimate__c, Total_Expense_Incurred__c) * 100) 
, &quot;Project Expense - Budget, Planned, Estimated, Incurred&quot;), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expense Summary - Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_BudgetMiletoneEstimate__c</fullName>
        <formula>&quot;http://chart.apis.google.com/chart?chtt=Task+Time+Budget+Analysis&amp;&quot;&amp;
&quot;chxr=0,0,&quot; &amp; Text(max( Total_Hours_Budget__c,Total_Hours_Budget_from_Milestones__c,Total_Hours_Estimate__c, Total_Hours_Incurred__c)) &amp; &quot;&amp;&quot; &amp;
&quot;chxt=y&amp;chbh=a&amp;chs=300x225&amp;cht=bvg&amp;&quot;&amp;
&quot;chco=2299bb,eeaa66,ee3322,666666&amp;&quot;&amp;
&quot;chdl=&quot;&amp;
&quot;Budget (&quot; &amp; TEXT(Total_Hours_Budget__c) &amp; &quot;)&quot;&amp;
&quot;|Planned (&quot; &amp; TEXT(Total_Hours_Budget_from_Milestones__c) &amp; &quot;)&quot;&amp;
&quot;|Estimated (&quot; &amp; TEXT(Total_Hours_Estimate__c) &amp; &quot;)&quot;&amp;
&quot;|Incurred (&quot; &amp; TEXT(Total_Hours_Incurred__c) &amp; &quot;)&quot;&amp;
&quot;&amp;chd=t:&quot;&amp;
TEXT( Total_Hours_Budget__c / max( Total_Hours_Budget__c,Total_Hours_Budget_from_Milestones__c,Total_Hours_Estimate__c, Total_Hours_Incurred__c) * 100 )&amp;&quot;|&quot;&amp; 
TEXT( Total_Hours_Budget_from_Milestones__c / max( Total_Hours_Budget__c,Total_Hours_Budget_from_Milestones__c,Total_Hours_Estimate__c, Total_Hours_Incurred__c) * 100)  &amp;&quot;|&quot; &amp; 
TEXT( Total_Hours_Estimate__c / max( Total_Hours_Budget__c,Total_Hours_Budget_from_Milestones__c,Total_Hours_Estimate__c, Total_Hours_Incurred__c) * 100 ) &amp;&quot;|&quot; &amp; 
TEXT(  Total_Hours_Incurred__c / max( Total_Hours_Budget__c,Total_Hours_Budget_from_Milestones__c,Total_Hours_Estimate__c, Total_Hours_Incurred__c) * 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Summary - Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Image_HoursSummary__c</fullName>
        <formula>IF( Total_Hours_Budget__c &gt; 0, 
IMAGE(Status_BudgetMiletoneEstimate__c, &quot;Hours Summary: Budgeted, Planned, Estimated and Incurred.&quot;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Summary (chart) - Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Image_OpenVComplete__c</fullName>
        <formula>IF( Status_TasksOpenComplete__c != &apos;&apos;,
IMAGE( Status_TasksOpenComplete__c , &quot;Open vs. Complete Tasks&quot;) , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open vs. Complete Tasks (chart) - Deprec</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Img_OpenLateBlocked__c</fullName>
        <formula>IMAGE( Status_TasksOpenBlockedLate__c , &quot;Open, Late &amp; Blocked Tasks.&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open, Late &amp; Blocked Tasks (chart) - Dep</label>
        <type>Text</type>
    </fields>
</CustomObject>